# python-advanced-slides

./: .gitignore  README.md  exercises.md  index.md  netlify.toml  slides.md
exercises/: Mini-project 1. A dataset.ipynb  dataset.ipynb  naive_bfs.py  naive_code_breaker.py
exercises/data/: exams.csv  other_dataset.json
solutions/: README.md  asyncio-chessmaster_part1.py  asyncio-chessmaster_part2.py  bfs.py  code_breaker.py  code_breaker_summary.md  dataset.ipynb  nilakantha_part1.py  nilakantha_part2.py  nilakantha_part3.py  virus_spread_simulation.py
solutions/bank_accounts_simulator/: pyproject.toml  scenario1.py  setup.py
solutions/bank_accounts_simulator/account/: internal.py  monitor.py
solutions/bank_accounts_simulator/examples/: scenario1.py
solutions/bank_accounts_simulator/src/account/: internal.py  monitor.py
solutions/bank_accounts_simulator/tests/: test_agios.py  test_blocked.py  test_internal.py
solutions/virus_spread_simulation/: main.py  simulator.py
solutions/virus_spread_simulation/intermediary_parts/: simulator_v1.py  simulator_v2_with_lockdowns.py  simulator_v3_slices.py  simulator_v4_with_celebrations.py  virus_spread_simu_part2_with_lockdowns.py  virus_spread_simu_part3_with_incubation_delay.py
